[package]
name = "mane"
version = "0.1.0"
edition = "2021"
authors = ["kfly8"]
description = "Make a new elephant. A magical copy & replace tool without requiring template files - `mane` means imitation in Japanese"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.5"
ignore = "0.4"
convert_case = "0.6"
anyhow = "1.0"
atty = "0.2"
